Edited wiki page February through web user interface.

--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -123,7 +123,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || Jav || Kit || || Paid || Shipped 4/11 ||
 || || Vince - INT || Kit || RTC Kit || Paid || Shipped 4/16  ||
 || || Dan || kit || || || ||
-|| || jdbui || Built || || Paid || ||
+|| || jdbui || Built || || Paid || Shipped 4/8||
 || || noelingle || Kit || LCD kit - EVSIM || Paid || Shipped 4/16 ||
 || || mjrdye - INT || kit || LCD kit || Paid || Shipped 4/16||
 || || w.decker || || RTC Kit - EVsim || Paid || Shipped 4/16 ||
