--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -38,3 +38,4 @@ Payment via paypal to chris1howell83@gmail.com
 || 11 || mictronics - INT || kit || RTC Built || Paid || ||
 || 12 || eos.it INT || Kit || RTC Kit || Paid || ||
 || 13 || beazley || Built || RTC Built - EV Sim || Paid || ||
+|| 14 || fredouille INT || Built || RTC Built - EVsim || Paid || ||
