Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -41,3 +41,4 @@ Payment via paypal to chris1howell83@gmail.com
 || 14 || fredouille INT || Built || RTC Built - EVsim || Paid || ||
 || 15 || cyril INT || Kit || RTC - EVSim || Paid || ||
 || 16 || guy.german - INT || Built || LCD - EV Sim || || ||
+|| 17 ||  kris.stew || kit || RTC || Paid || ||
