Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -43,3 +43,4 @@ Payment via paypal to chris1howell83@gmail.com
 || 16 || guy.german - INT || Built || LCD - EV Sim || || ||
 || 18 || j.e.best || Built || RTC || Paid || ||
 || 19 || Sapounas - INT || Built || RTC - EVSIM || Paid || ||
+|| 20 || Jason || Built || RTC || Paid || ||
