--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -44,3 +44,4 @@ Payment via paypal to chris1howell83@gmail.com
 || 18 || j.e.best || Built || RTC || Paid || ||
 || 19 || Sapounas - INT || Built || RTC - EVSIM || Paid || ||
 || 20 || Jason || Built || RTC || Paid || ||
+|| 21 || amb INT || Kit || RTC - EVSIM || Paid || ||
