Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -47,3 +47,4 @@ Payment via paypal to chris1howell83@gmail.com
 || 20 || gnb || Kit || RTC || Paid || ||
 || 21 || Jason || Built || RTC || Paid || ||
 || 22 || amb INT || Kit || RTC - EVSIM || Paid || ||
+|| 23 || kinhood || Built || RTC - EVSIM || Paid || ||
