--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -5,6 +5,7 @@
     * [OpenEVSE_Compatibility Compatibility]
     * [OpenEVSE_Plus_spec OpenEVSE PLUS]
     * [OpenEVSE_LCD_spec RGB LCD]
+    * [theory_of_operation Theory of Operation]
   * *EVSE Charging Stations*
     * [Open_EVSEs EVSE Example Pictures]
     * [OpenEVSE_Workshop OpenEVSE Plus Workshop 30A]
