--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -28,7 +28,7 @@ Payment via paypal to chris1howell83@gmail.com
 ||   || Ryan ~2 || Kit || RGB LCD || Paid || ||
 || 1 || bug-ar || Built || RGB LCD Built - Int Ship || Paid ||  ||
 || 2 || sorphin || Kit || LCD Kit || Paid || ||
-|| 3 || andy || Built || LCD Built || || ||
+|| 3 || andy || Built || LCD Built || Paid || ||
 || 4 || mattgreen || Kit || RTC Kit || Paid || ||
 || 5 || bpifer || Kit || LCD Kit || Paid || ||
 || 6 || kris.stew || Kit || RTC || Paid || || 
