--- a/wiki/theory_of_operation.wiki
+++ b/wiki/theory_of_operation.wiki
@@ -1,5 +1,6 @@
 #summary Theory of Operation
 
+
 =Pilot circuit=
 
 The +/- 12v square wave is created by supplying an operational amplifier with a +/- 12v power supply created by the DC/DC converter module from the 12 volt supply. The output of the op-amp is buffered by R1 (which allows the EV to drag the voltage down without unduly straining the output stage of the amp) and fed to the vehicle. The pilot pin is also fed back to ADC1 of the CPU, which allows the CPU to sense the voltage. The CPU will detect the negative portion of the signal not being all the way at -12v as a missing diode condition and will use the voltage (and therefore, the resistance being offered by the EV on the pilot) to select states A through D (waiting for vehicle, vehicle connected, vehicle requests charging, vehicle requests vent+charge). In stage A, the CPU will select a solid +12v output, and in the other states (including the error state E), it will output a square wave whose duty cycle represents the current availability setting made in the UI for the current charging mode (L1 or L2). It does this by oscillating PB2 under software control.
@@ -15,3 +16,7 @@ The two AC line monitor chips act as opto-isloators. The presence of an AC volta
 =Relay control=
 
 The transistor and resistor on PB0 and PD7 are straightforward open-collector switching circuits. The reverse bias diodes across the relay coil protect the transistors from coil collapse voltages when the transistors are turned off.
+
+=Power on Self test =
+
+http://farm6.staticflickr.com/5456/9020614136_5089e7b47e_b.jpg
