--- a/wiki/OpenEVSE_LCD_spec.wiki
+++ b/wiki/OpenEVSE_LCD_spec.wiki
@@ -52,7 +52,9 @@ To add a control button, you need to solder .1" header pins or wires into the sh
 
 http://i833.photobucket.com/albums/zz256/aeronutt/Open%20EVSE%20Plus%20v2/Button1.jpg
 
+If using the Adafruit Water resistant push button, connect the 5v to the + terminal, GND to - and Com and the Select button to NO.
 http://farm9.staticflickr.com/8189/8420626671_1428cc8f0f_c.jpg
+http://www.adafruit.com/datasheets/metal16mmbuttons.jpg
 http://farm9.staticflickr.com/8260/8662590903_afb140270e_c.jpg
 
 This evaluation board/kit is intended for use for ENGINEERING DEVELOPMENT, DEMONSTRATION, OR EVALUATION PURPOSES ONLY and is not considered to be a finished end-product fit for general consumer use.
