--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -1,6 +1,9 @@
 #summary May/June Batch.
 
 = Introduction =
+
+*Update 6/20* Boards have not arrived yet but should be in any day now... 
+*Update 5/20* Boards are in production
 *Update 4/30* 100 boards ordered for the next batch
 
 
