Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -35,6 +35,7 @@ Payment via paypal to chris1howell83@gmail.com
 
 || Slot || Name || OpenEVSE Plus || Extras || Payment Recieved || Shipped ||
 ||   || Ryan ~2 || Kit || RGB LCD || Paid || ||
+||   || bitsource || Kit || LCD board only || paid || ||
 || 1 || bug-ar || Built || RGB LCD Built - Int Ship || Paid ||  ||
 || 2 || sorphin || Kit || LCD Kit || Paid || ||
 || 3 || andy || Built || LCD Built || Paid || ||
