--- a/wiki/YetAnotherOpenEVSE.wiki
+++ b/wiki/YetAnotherOpenEVSE.wiki
@@ -66,6 +66,7 @@ The remaining steps:
 || Home Depot || ? || 10' || 10W3 cable ||
 || Home Depot || ? || 1 || L6-30 plug ||
 || Home Depot || ? || 1 || 4 position ground bus ||
+|| Home Depot || ? || misc || 4-40 hardware - nuts, 1/4" & 1/2" bolts ||
 || Halted Spec. || n/a || 2 || 1." header crimp-on connector (1x 2 pos, 1x 3 pos) ||
 || AdaFruit || 560 || 1 || Waterproof metal lit pushbutton (green) ||
 || SparkFun || ? || 1 || 4 pin, 12" jumper wire ||
