--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -2,6 +2,8 @@
 
 = Introduction =
 
+*Update 7/10* Things are finally moving, after every possible delay you could think of gold phoenix has commuted to shipping the first 10 tomorrow via fedex and the second 90 once I approve. The test bath. I guess they were a bit off when they quoted 19 days (5 for PCBs production and 14 for assembly) way back on 4/30
+
 *Update 6/25* Gold Phoenix will ship boards this week, they were delaying production due to a back ordered part. I have plenty so I will add the part on my end. 
 
 Their automated system was incorrectly showing 100% complete beacuse they exceeded their 14 day production quote by way too many days...
